--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,31 +2,22 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Francesco Mazzone-Bianco
     - name: Languages
-      value: English, German
+      value: Italian, English, German, French, Spanish, Portuguese, Chinese Mandarin
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Graduate Researcher (non-degree)
+      institution: The Chinese University of Hong Kong, Hong Kong, HKSAR
+      year: 2024
+    - title: Mechanical Engineering MSc
+      institution: ETH Zürich, Zurich, Switzerland
+      year: 2023
+    - title: Mechanical Engineering BSc
+      institution: Politecnico di Milano, Milan, Italy
+      year: 2019
 
 - title: Experience
   type: time_table
