--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -12,13 +12,15 @@
     - title: Graduate Researcher (non-degree) at Multimedia Laboratory (MMLab)
       institution: The Chinese University of Hong Kong, Hong Kong, HKSAR
       year: 2024-2025
-      description:
-        - Research: 3D/4D vision, perception, reconstruction and rendering
+      - title: Research
+          contents:
+            - 3D/4D vision, perception, reconstruction and rendering
     - title: Mechanical Engineering MSc
       institution: ETH Zürich, Zurich, Switzerland
       year: 2023
-      description:
-        - Concentration: computer vision, control systems
+      - title: Concentration
+          contents:
+            - computer vision, control systems
     - title: Mechanical Engineering BSc
       institution: Politecnico di Milano, Milan, Italy
       year: 2019
@@ -27,14 +29,14 @@
   type: time_table
   contents:
     - title: Computer Vision Graduate Engineer
-      organization: Audi F1 Project (FIA Formula 1 Team), Zürich, Switzerland
+      company: Audi F1 Project (FIA Formula 1 Team), Zürich, Switzerland
       year: 2023-2024
     - title: Software Engineering Intern
-      organization: Beyond Gravity AG, Zürich, Switzerland
+      company: Beyond Gravity AG, Zürich, Switzerland
       year: 2022-2023
     - title: Robotics Intern
-      organization: Pick8ship Technology AG, Zürich, Switzerland
+      company: Pick8ship Technology AG, Zürich, Switzerland
       year: 2022
     - title: Research Assistant
-      organization: EMPA, Zürich, Switzerland
+      company: EMPA, Zürich, Switzerland
       year: 2021-2022
