--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -30,13 +30,13 @@
   contents:
     - title: Computer Vision Graduate Engineer
       company: Audi F1 Project (FIA Formula 1 Team), Zürich, Switzerland
-      year: 2023-2024
+      year: 2023
     - title: Software Engineering Intern
       company: Beyond Gravity AG, Zürich, Switzerland
-      year: 2022-2023
+      year: 2022
     - title: Robotics Intern
       company: Pick8ship Technology AG, Zürich, Switzerland
       year: 2022
     - title: Research Assistant
       company: EMPA, Zürich, Switzerland
-      year: 2021-2022
+      year: 2021
