minor update in cv.yml page

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -12,13 +12,15 @@
     - title: Graduate Researcher (non-degree) at Multimedia Laboratory (MMLab)
       institution: The Chinese University of Hong Kong, Hong Kong, HKSAR
       year: 2024-2025
-      - title: Research
+      description:
+        - title: Research
           contents:
             - 3D/4D vision, perception, reconstruction and rendering
     - title: Mechanical Engineering MSc
       institution: ETH Zürich, Zurich, Switzerland
       year: 2023
-      - title: Concentration
+      description:
+        - title: Concentration
           contents:
             - computer vision, control systems
     - title: Mechanical Engineering BSc
