--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,16 +13,12 @@
       institution: The Chinese University of Hong Kong, Hong Kong, HKSAR
       year: 2024-2025
       description:
-        - title: "Research:"
-          contents:
-            - 3D/4D vision, perception, reconstruction and rendering
+        - title: "research: 3D/4D vision, perception, reconstruction and rendering"
     - title: Mechanical Engineering MSc
       institution: ETH Zürich, Zurich, Switzerland
       year: 2023
       description:
-        - title: "Concentrations:"
-          contents:
-            - computer vision, control systems
+        - title: "concentrations: computer vision, control systems"
     - title: Mechanical Engineering BSc
       institution: Politecnico di Milano, Milan, Italy
       year: 2019
