--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,9 +18,7 @@
       institution: ETH Zürich, Zurich, Switzerland
       year: 2023
       description:
-        - title: 
-          contents:
-            - "Concentrations:" computer vision, control systems
+        - title: "Concentrations: computer vision, control systems"
     - title: Mechanical Engineering BSc
       institution: Politecnico di Milano, Milan, Italy
       year: 2019
