--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -12,13 +12,11 @@
     - title: Graduate Researcher (non-degree) at Multimedia Laboratory (MMLab)
       institution: The Chinese University of Hong Kong, Hong Kong, HKSAR
       year: 2024-2025
-      description:
-        - title: "Research: 3D/4D vision, perception, reconstruction and rendering"
+      description: "Research: 3D/4D vision, perception, reconstruction, and rendering"
     - title: Mechanical Engineering MSc
       institution: ETH Zürich, Zurich, Switzerland
       year: 2023
-      description:
-        - title: "Concentrations: computer vision, control systems"
+      description: "Concentrations: computer vision, control systems"
     - title: Mechanical Engineering BSc
       institution: Politecnico di Milano, Milan, Italy
       year: 2019
