revert to previous version

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -12,15 +12,14 @@
     - title: Graduate Researcher (non-degree) at Multimedia Laboratory (MMLab)
       institution: The Chinese University of Hong Kong, Hong Kong, HKSAR
       year: 2024
-      description: Research: 3D/4D vision, perception, reconstruction, and rendering
+      description: "Research: 3D/4D vision, perception, reconstruction, and rendering"
     - title: Mechanical Engineering MSc
       institution: ETH Zürich, Zurich, Switzerland
       year: 2023
-      description: Concentrations: computer vision, control systems
+      description: "Concentrations: computer vision, control systems"
     - title: Mechanical Engineering BSc
       institution: Politecnico di Milano, Milan, Italy
       year: 2019
-      description: ""
 
 - title: Experience
   type: time_table
@@ -28,16 +27,12 @@
     - title: Computer Vision Graduate Engineer
       institution: Audi F1 Project (FIA Formula 1 Team), Zürich, Switzerland
       year: 2023
-      description: ""
     - title: Software Engineering Intern
       institution: Beyond Gravity AG, Zürich, Switzerland
       year: 2022
-      description: ""
     - title: Robotics Intern
       institution: Pick8ship Technology AG, Zürich, Switzerland
       year: 2022
-      description: ""
     - title: Research Assistant
       institution: EMPA, Zürich, Switzerland
       year: 2021
-      description: ""
