--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -9,32 +9,32 @@
 - title: Education
   type: time_table
   contents:
-    - title: "Graduate Researcher (non-degree) at [MMLab](https://mmlab.ie.cuhk.edu.hk/), CUHK"
-      institution: "The Chinese University of Hong Kong, Hong Kong, HKSAR"
+    - title: 'Graduate Researcher (non-degree) at <a href="https://mmlab.ie.cuhk.edu.hk/" target="_blank">MMLab</a>, CUHK'
+      institution: 'The Chinese University of Hong Kong, Hong Kong, HKSAR'
       year: 2024
       description: 
-        - "Research: 3D/4D vision, perception, reconstruction, and rendering"
-        - "Advisor: [Pr. Hongsheng Li](https://www.ee.cuhk.edu.hk/~hsli/)"
-    - title: "Mechanical Engineering MSc"
-      institution: "ETH Zürich, Zurich, Switzerland"
+        - 'Research: 3D/4D vision, perception, reconstruction, and rendering'
+        - 'Advisor: <a href="https://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Pr. Hongsheng Li</a>' 
+    - title: 'Mechanical Engineering MSc'
+      institution: 'ETH Zürich, Zurich, Switzerland'
       year: 2023
-      description: "Concentrations: computer vision, control systems"
-    - title: "Mechanical Engineering BSc"
-      institution: "Politecnico di Milano, Milan, Italy"
+      description: 'Concentrations: computer vision, control systems'
+    - title: 'Mechanical Engineering BSc'
+      institution: 'Politecnico di Milano, Milan, Italy'
       year: 2019
 
 - title: Experience
   type: time_table
   contents:
-    - title: "Computer Vision Graduate Engineer"
-      institution: "[Audi F1 Project](https://www.audi-mediacenter.com/en/formula-1-14842) (FIA Formula 1 Team), Zürich, Switzerland"
+    - title: 'Computer Vision Graduate Engineer'
+      institution: '<a href="https://www.audi-mediacenter.com/en/formula-1-14842" target="_blank">Audi F1 Project</a> (FIA Formula 1 Team), Zürich, Switzerland'
       year: 2023
-    - title: "Software Engineering Intern"
-      institution: "[Beyond Gravity AG](https://www.beyondgravity.com/en), Zürich, Switzerland"
+    - title: 'Software Engineering Intern'
+      institution: '<a href="https://www.beyondgravity.com/en" target="_blank">Beyond Gravity AG</a>, Zürich, Switzerland'
       year: 2022
-    - title: "Robotics Intern"
-      institution: "[Pick8ship Technology AG](https://www.pick8ship.com/en/home-2/), Zürich, Switzerland"
+    - title: 'Robotics Intern'
+      institution: '<a href="https://www.pick8ship.com/en/home-2/" target="_blank">Pick8ship Technology AG</a>, Zürich, Switzerland'
       year: 2022
-    - title: "Research Assistant"
-      institution: "[EMPA](https://www.empa.ch/), Zürich, Switzerland"
+    - title: 'Research Assistant'
+      institution: '<a href="https://www.empa.ch/" target="_blank">EMPA</a>, Zürich, Switzerland'
       year: 2021
