changed name to legal name

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,7 +2,7 @@
   type: map
   contents:
     - name: Full Name
-      value: Francesco Mazzone-Bianco
+      value: Francesco Mazzone
     - name: Languages
       value: Italian, English, German, French, Spanish, Portuguese, Chinese Mandarin
 
