--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Francesco
 middle_name: 
-last_name: Mazzone-Bianco
+last_name: Mazzone
 email: francesco.mazzone@alumni.ethz.ch
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
