--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -9,7 +9,7 @@
 - title: Education
   type: time_table
   contents:
-    - title: 'Graduate Researcher (non-degree), EECS 
+    - title: 'Graduate Researcher (non-degree), EECS'
       institution: 'The Chinese University of Hong Kong, Hong Kong, HKSAR'
       year: 2024
       description: 
