minor update in cv.yml entry

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -32,7 +32,7 @@
   type: time_table
   contents:
     - title: 'Computer Vision Engineer'
-      institution: '<a href="https://www.audi-mediacenter.com/en/formula-1-14842" target="_blank">Audi F1 Project</a> (FIA Formula 1 Team), Zürich, Switzerland'
+      institution: '<a href="https://www.audi-mediacenter.com/en/formula-1-14842" target="_blank">Audi Formula 1</a>, Zürich, Switzerland'
       year: 2023
     - title: 'Software Engineering Intern'
       institution: '<a href="https://www.beyondgravity.com/en" target="_blank">Beyond Gravity AG</a>, Zürich, Switzerland'
