updated CV page to align with .pdf CV

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,19 +4,11 @@
     - name: Full Name
       value: Francesco Mazzone
     - name: Languages
-      value: Italian, English, German, French, Spanish, Portuguese, Chinese Mandarin
+      value: Italian, English, German, French, Spanish, Portuguese, Mandarin Chinese
 
 - title: Education
   type: time_table
   contents:
-    - title: 'Graduate Researcher (non-degree), EECS'
-      institution: 'The Chinese University of Hong Kong, Hong Kong, HKSAR'
-      year: 2024
-      description: 
-        - 'Lab: <a href="https://mmlab.ie.cuhk.edu.hk/" target="_blank">MMLab</a>, CUHK'
-        - 'Research: 3D/4D vision, perception, reconstruction, and rendering'
-        - 'Advisor: <a href="https://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Pr. Hongsheng Li</a>' 
-        - 'Selected coursework: Introduction to Deep Learning, Image Processing and Computer Vision' 
     - title: 'Mechanical Engineering MSc'
       institution: 'ETH Zürich, Zurich, Switzerland'
       year: 2023
@@ -31,6 +23,9 @@
 - title: Experience
   type: time_table
   contents:
+    - title: 'Graduate Researcher, EECS'
+      institution: '<a href="https://mmlab.ie.cuhk.edu.hk/" target="_blank">MMLab</a>, CUHK', Hong Kong, HKSAR, China'
+      year: 2024
     - title: 'Computer Vision Engineer'
       institution: '<a href="https://www.audi-mediacenter.com/en/formula-1-14842" target="_blank">Audi Formula 1</a>, Zürich, Switzerland'
       year: 2023
