updated for proper formatting

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,7 +24,7 @@
   type: time_table
   contents:
     - title: 'Graduate Researcher, EECS'
-      institution: '<a href="https://mmlab.ie.cuhk.edu.hk/" target="_blank">MMLab</a>, CUHK', Hong Kong SAR, China'
+      institution: '<a href="https://mmlab.ie.cuhk.edu.hk/" target="_blank">MMLab</a>, CUHK, Hong Kong SAR, China'
       year: 2024
     - title: 'Computer Vision Engineer'
       institution: '<a href="https://www.audi-mediacenter.com/en/formula-1-14842" target="_blank">Audi Formula 1</a>, Zürich, Switzerland'
